[package]
name = "ipset-rs"
version = "0.1.0"
edition = "2024"

[features]
trace = ["tracing"]
default = []

[dependencies]
tracing = { version = "0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["http2"] }
tracing = "0"
tracing-subscriber = "0.3"
